@startuml

Policia ..> Cuchillo
Policia ..> Reloj
Cuchillo ..> Reloj




 class Cuchillo{
    - contadorAtaques : int
     + interactuar(p : Policia, reloj : Reloj) : void
}





class Policia {
    - ciudadActual : Ciudad
    - rango : Rango
    + visitar(edificio: Edificio, r : Reloj): Interactuable
    + viajar(destino : Ciudad , r : Reloj): void
    + dormir( r : Reloj) : void
}



class Reloj{
    - tiempoTranscurrido: Tiempo
    - tiempoMaximo: Tiempo
    + mostrar() : Tiempo
    + incrementar(tiempo : Tiempo): void
    - verificarTiempoExcedido() : void
}


@enduml
